testShm12 select then in